--- a/src/package.json
+++ b/src/package.json
@@ -19,5 +19,8 @@
     "hardhat": "^2.17.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3"
   }
 }
