--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.8",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.17.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
