Tried to get things working from cast. did not work

--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -2,3 +2,12 @@ MAINNET_ALCHEMY_URL=
 ARB_MAINNET_ALCHEMY_URL=
 RPC_URL=
 PRIVATE_KEY=
+LUCKY_USER=
+ALICE=
+USDC=
+WETH=
+OTHER_USER=
+LUCKY_USER=
+WETHM=
+DAI=
+DAI_USER=
